resources/scss/_guest.scss
.ads-search {
    background-color: #eee;
    padding: 1rem 2rem;
    margin-top: 2rem;
}

.ad_preview_col {
    padding: 1rem;
}

.ad_preview {
    background-color: $gray-100;
    padding: 2rem;
    border: 1px solid $gray-600;
}

.ad_preview.premium, .ad_preview.gold {
    outline: 1px solid $gray-600;
    outline-offset: -5px;
}

.ad_preview.gold .left,
.ad_preview.gold .right {
    padding: 2rem;
    max-width: 50%;
}

.ad_preview.gold h6 {
    line-height: 1.75;
    text-align: center;
}

.ad_preview .logo {
    width: 60px;
    border: 1px solid $gray-600;
    padding: 3px;
}

.ad_preview p {
    font-weight: 600;
}

.ad_preview p span {
    font-weight: 400;
}

@media screen and (max-width: 991px){
    .ad_preview.gold .left,
    .ad_preview.gold .right {
        padding: 0;
        max-width: 100%;
    }

    .ad_preview.gold .right {
        margin-top: 2rem;
    }

    .ads-search {
        padding: 0 !important;
    }
}

.post_wrapper {
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.posts_date_title {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

/* HEADING ELEMENT WITH LINE THROUGH */
.line-through {
    display: flex;
    flex-direction: row;
}

.line-through:before, .line-through:after {
    content: "";
    flex: 1 1;
    border-bottom: 2px solid $black;
}

.line-through:before {
    margin-right: 2rem;
    margin-bottom: 1.25rem;
}

.line-through:after {
    margin-left: 2rem;
    margin-bottom: 1.25rem;
}

.navbar-item-active {
    font-weight: 600;
    text-decoration: underline;
}

.full_post_wrapper {
    background: #eee;
    border: 1px solid $gray-400;
}

.full_post_wrapper .header {
    background-color: $black;
    color: $white;
    font-weight: 500;
    padding: 0 4rem;
    font-size: 1rem;
    line-height: 2rem;
    text-align: center;
}

.full_post_wrapper .symbol img {
    height: 70px;
    width: auto;
}

.hr_gray_500 {
    border-bottom: 1px solid $gray-500;
}

.fire_effect_box_shadow {
    box-shadow: 0 0 8px 2px #ffe808,0 0 10px 4px #ff9a00,0 0 14px 6px #ff0000;
    color: #fff;
    transition: all 0.3s ease-in-out;
}

.candle_lit {
    background-color: #5c5c5c;
    color: #ffffff;
    transition: all 0.3s ease-in-out;
}

// Image radio component

.img-select-component > .row {
    display: flex;
    align-items: center;
    height: 100%;
}
.col img {
    height:100%;
    width: 100%;
    cursor: pointer;
    transition: transform 1s;
    object-fit: cover;
}
.col label {
    overflow: hidden;
    position: relative;
}
.imgbgchk:checked + label>.tick_container {
    opacity: 1;
}

/* ANIMATION */
.imgbgchk:checked + label>img {
    opacity: 0.7;
}
.tick_container {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    cursor: pointer;
    text-align: center;
}
.tick {
    background-color: #4CAF50;
    color: white;
    font-size: 16px;
    padding: 6px 12px;
    height: 40px;
    width: 40px;
    border-radius: 100%;
}

.guest-container {
    min-height: 100vh;
}

.icon-fixed-width-20 {
    width: 20px;
}

.lh-1p75 {
    line-height: 1.75rem;
}

.legal-terms-ol {
    list-style: decimal;
    padding-inline-start: 1.5rem;
}

.legal-terms-ul {
    list-style: disc;
    padding-inline-start: 1.5rem;
}

